--- a/deb_dist/mvgrpfiles-1.0.6/debian/control
+++ b/deb_dist/mvgrpfiles-1.0.6/debian/control
@@ -1,10 +1,12 @@
-Package: python3-mvgrpfiles
 Source: mvgrpfiles
-Version: 1.0.5-1
-Architecture: all
 Maintainer: Guillermo García Grao <guillermo.garcia.grao@gmail.com>
-Installed-Size: 28
-Depends: python3:any
 Section: python
 Priority: optional
+Build-Depends: python3-setuptools, python3-all, debhelper (>= 9)
+Standards-Version: 3.9.1
+
+Package: python3-mvgrpfiles
+Architecture: all
+Depends: ${misc:Depends}, ${python3:Depends}
 Description: A Python program that moves all files from all members of a
+
